<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_app_search"
        android:title="@string/action_bar_search"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_mute_notifications"
        android:title="@string/action_mute_notifications" />

    <item
        android:id="@+id/action_view_contact"
        android:title="@string/action_view_contact" />

    <item
        android:id="@+id/action_export_chat"
        android:title="@string/action_export_chat" />

    <item
        android:id="@+id/action_create_shortcut"
        android:title="@string/action_create_shortcut" />

    <item
        android:id="@+id/delete_chat_history_button"
        android:title="@string/action_clear_chat" />

    <item
        android:id="@+id/action_delete_chat"
        android:title="@string/action_delete_chat" />




</menu>